syntax = "proto3";
option java_package = "com.texture_image.proto";

import "border_radius.proto";

message TextureImageInfo {
  string url = 1;

  int32 width = 2;

  int32 height = 3;

  string errorPlaceholder = 4;

  string placeholder = 5;

  ImageBorderRadius borderRadius = 6;
}
